change logo and app name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
    <application
        android:usesCleartextTraffic="true"
 
-        android:label="batoidex_bat"
+        android:label="Batoidex"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
