--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+#  flutter_launcher_icons: ^0.9.2
+
+#flutter_icons:
+#  android: "launcher_icon"
+#  image_path: "assets/icon/icon.png"
 
 # The following section is specific to Flutter.
 flutter:
