--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http: ^0.13.1
   cached_network_image: ^3.0.0
   font_awesome_flutter: ^9.2.0
+  # Firebase
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
 
 dev_dependencies:
   flutter_test:
