--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,20 @@ dependencies:
   http: ^0.13.1
   cached_network_image: ^3.0.0
   font_awesome_flutter: ^9.2.0
+
   # Firebase
-  firebase_core: ^1.10.6
   firebase_auth: ^3.3.4
+  firebase_core: ^1.16.0
+  google_sign_in: ^5.0.3
+
+  # State managment
+  provider: ^5.0.0
+
+  # Toast
+  fluttertoast: ^8.0.7
+
+  # Validators
+  email_validator: '^2.0.1'
 
 dev_dependencies:
   flutter_test:
