--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^3.3.4
   firebase_core: ^1.16.0
   google_sign_in: ^5.0.3
+  cloud_firestore: ^3.1.5
 
   # State managment
   provider: ^5.0.0
