--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   # Navigation bar
   curved_navigation_bar: ^1.0.1
 
+  # Camera
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
